re-commit of change fa fa-x-tick and fa fa-x-cross on results page to fas fa-check-circle and fas fa-times-circle e.g. solid circle icons to resolve contrast errors. We should probably do this in other places that we use ticks an crosses too. *Accessibility

--- a/modules/xerte/parent_templates/Nottingham/models_html5/results.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/results.css
@@ -84,3 +84,13 @@
 	padding-bottom: 1em;
 	margin-bottom: 1em;
 }
+.fas.fa-check-circle{
+	color:green;
+	background: white;
+	border-radius: 12px;
+}
+.fas.fa-times-circle{
+	color:red;
+	background: white;
+	border-radius: 12px;
+}
